--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/app.ts",
-    "dev": "nodemon src/app.ts"
+    "dev": "nodemon src/app.ts",
+    "dev_client": "webpack-dev-server "
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,36 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "@types/node": "11.13.4",
+    "@types/react": "^16.7.13",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-jss": "^8.6.0",
+    "@types/webpack-env": "1.13.7",
+    "awesome-typescript-loader": "^5.2.1",
+    "bundle-loader": "0.5.6",
+    "clean-webpack-plugin": "0.1.17",
+    "compression-webpack-plugin": "0.3.1",
+    "copy-webpack-plugin": "5.0.4",
+    "css-loader": "^3.4.2",
+    "file-loader": "^2.0.0",
+    "fs-extra": "^7.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "json-loader": "0.5.4",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-static": "0.7.11",
+    "npm-run-all": "4.1.5",
+    "rimraf": "3.0.0",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^1.1.2",
+    "ts-loader": "6.0.4",
+    "tslint": "5.18.0",
+    "tslint-loader": "3.5.4",
+    "typescript": "^3.2.2",
+    "typescript-map": "0.0.7",
+    "uglifyjs-webpack-plugin": "2.1.2",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
